fix functional test for order 1. log in issue 2. related entity id

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,56 @@
 .svn
 /nbproject/private/*
 /nbproject/private
+/vendor/cache/actionmailer-4.1.4.gem
+/vendor/cache/actionpack-4.1.4.gem
+/vendor/cache/actionview-4.1.4.gem
+/vendor/cache/activemodel-4.1.4.gem
+/vendor/cache/activerecord-4.1.4.gem
+/vendor/cache/activesupport-4.1.4.gem
+/vendor/cache/acts_as_list-0.4.0.gem
+/vendor/cache/arel-5.0.1.20140414130214.gem
+/vendor/cache/bcrypt-3.1.7-x64-mingw32.gem
+/vendor/cache/bcrypt-ruby-3.1.5-x64-mingw32.gem
+/vendor/cache/builder-3.2.2.gem
+/vendor/cache/coffee-rails-4.0.1.gem
+/vendor/cache/coffee-script-2.3.0.gem
+/vendor/cache/coffee-script-source-1.7.1.gem
+/vendor/cache/erubis-2.7.0.gem
+/vendor/cache/execjs-2.2.1.gem
+/vendor/cache/hanzi_to_pinyin-0.9.1.gem
+/vendor/cache/hike-1.2.3.gem
+/vendor/cache/i18n-0.6.11.gem
+/vendor/cache/jbuilder-2.1.2.gem
+/vendor/cache/jquery-rails-3.1.1.gem
+/vendor/cache/json-1.8.1.gem
+/vendor/cache/mail-2.5.4.gem
+/vendor/cache/mime-types-1.25.1.gem
+/vendor/cache/minitest-5.4.0.gem
+/vendor/cache/multi_json-1.10.1.gem
+/vendor/cache/pg-0.17.1-x64-mingw32.gem
+/vendor/cache/polyglot-0.3.5.gem
+/vendor/cache/rack-1.5.2.gem
+/vendor/cache/rack-test-0.6.2.gem
+/vendor/cache/rails-4.1.4.gem
+/vendor/cache/rails-i18n-4.0.2.gem
+/vendor/cache/rails_12factor-0.0.2.gem
+/vendor/cache/rails_autolink-1.1.6.gem
+/vendor/cache/rails_serve_static_assets-0.0.2.gem
+/vendor/cache/rails_stdout_logging-0.0.3.gem
+/vendor/cache/railties-4.1.4.gem
+/vendor/cache/rake-10.3.2.gem
+/vendor/cache/rdoc-4.1.1.gem
+/vendor/cache/sass-3.2.19.gem
+/vendor/cache/sass-rails-4.0.3.gem
+/vendor/cache/sdoc-0.4.0.gem
+/vendor/cache/sprockets-2.11.0.gem
+/vendor/cache/sprockets-rails-2.1.3.gem
+/vendor/cache/thor-0.19.1.gem
+/vendor/cache/thread_safe-0.3.4.gem
+/vendor/cache/tilt-1.4.1.gem
+/vendor/cache/treetop-1.4.15.gem
+/vendor/cache/turbolinks-2.2.2.gem
+/vendor/cache/tzinfo-1.2.1.gem
+/vendor/cache/tzinfo-data-1.2014.5.gem
+/vendor/cache/uglifier-2.5.1.gem
+/vendor/cache/yamler-0.1.0.gem
