--- a/test/fixtures/meals.yml
+++ b/test/fixtures/meals.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 1
   date: 2014-07-04
-  meal_type: 
+  meal_type: lunch
 
 two:
+  id: 2
   date: 2014-07-04
-  meal_type: 
+  meal_type: dinner
